<?xml version="1.0"?>
<package>
  <name>rosshow</name>
  <version>0.1.0</version>
  <description>
    A tool to visualize LaserScan, Image, and NavSatFix
    topics using Unicode/ASCII art.
  </description>

  <maintainer email="fubar@fubar.com">
    Dheera Venkatraman
  </maintainer>
  <license>TBD</license>
  <url type="website">wiki.ros.org/rosshow</url>
  <url type="repository">
    https://github.com/dheera/rosshow
  </url>
  <url type="bugtracker">
    https://github.com/dheera/rosshow/issues
  </url>
  <author>Dheera Venkatraman</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>python-scipy</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-scipy</run_depend>

</package>
